@@ -1059,6 +1059,15 @@ variables.
 
 The categories output by default are @samp{unsupported} and
 @samp{unused}.
+
+@vindex WARNINGS
+The environment variable @samp{WARNINGS} can contain a comma separated
+list of categories to enable.  It will be taken into account before the
+command-line switches, this way @samp{-Wnone} will also ignore any
+warning category enabled by @samp{WARNINGS}.  This variable is also used
+by other tools like @command{autoconf}; unknown categories are ignored
+for this reason.
+
 @end table
 
 
