@@ -1,4 +1,4 @@
-@set UPDATED 7 July 2002
+@set UPDATED 9 July 2002
 @set UPDATED-MONTH July 2002
 @set EDITION 1.6a
 @set VERSION 1.6a
