@@ -15,7 +15,7 @@ EOF
 
 $ACLOCAL
 # Make sure this warning is print in the `portability' category.
-$AUTOMAKE -Wno-error -Wnone -Wportability 2>stderr
+$AUTOMAKE --warnings=no-error,none,portability 2>stderr
 cat stderr
 grep GOOD stderr && exit 1
 grep _BAD stderr
