@@ -1,3 +1,12 @@
+2002-07-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* automake.texi (Invoking Automake): Document WARNINGS.
+	* automake.in (switch_warning, parse_WARNINGS): New function.
+	(setup_warnings): Rename to ...
+	(parse_warnings): ... this.  Move most of the code to switch_warning.
+	Accept a comma separated list of categories.
+	* tests/vars2.test: Use a comma separated list of warning categories.
+
 2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* NEWS (New in 1.6): Mention that libtoolize is no longer run
